// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = env("DATABASE_URL")
}

generator dbml{
  provider = "prisma-dbml-generator"
}

model Account {
  accountNo Int       @id @default(autoincrement())
  name      String
  surname   String
  username  String
  password  String
  balance   Float
  isLogged  Boolean   @default(false)
  acctType  String
  customer Customer?
  seller    Seller?
}

model Customer {
  accountNo       Int           @unique
  email           String
  phoneNo         String
  shippingAddress String
  transactions    Transaction[]
  account         Account       @relation(fields: [accountNo], references: [accountNo])
}

model Seller {
  accountNo   Int     @unique
  companyName String
  items       Item[]
  account     Account @relation(fields: [accountNo], references: [accountNo])
}

model Item {
  itemNo       Int           @id @default(autoincrement())
  name         String
  price        Float
  quantity     Int
  description  String
  imageUrl     String
  status       String
  sold         Int
  sellerId     Int
  Seller       Seller?       @relation(fields: [sellerId], references: [accountNo])
  transactions Transaction[]
}

model Transaction {
  transactionId Int       @id @default(autoincrement())
  itemNo        Int
  custId        Int
  Date          DateTime
  totalPrice    Float
  quantity      Int
  Item          Item?     @relation(fields: [itemNo], references: [itemNo])
  customer      Customer? @relation(fields: [custId], references: [accountNo])
}
